Bug 113202 - FILEOPEN: RTF: Incorrect vertical position of last bullet of the list
Summary: FILEOPEN: RTF: Incorrect vertical position of last bullet of the list
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.0.0 target:5.4.4
Keywords: bibisected, bisected, filter:rtf, regression
Depends on:
Blocks: RTF-Bullet-Number-Lists
  Show dependency treegraph
 
Reported: 2017-10-17 21:00 UTC by Xisco Faulí
Modified: 2021-02-13 05:52 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-10-17 21:00:31 UTC
This is a follow-up`of bug 112211

Steps to reproduce:
1. Open attachment 103953 [details] from bug 82104

Observed behaviour: Last bullet's spacing in 'Instance Size' column is incorrect. Check attachment 137026 [details]

Reproduced in

Version: 6.0.0.0.alpha0+
Build ID: 04d70c0999c716f5465631eca50945915ec607c4
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2017-10-17 21:01:04 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.co.uk>	2017-07-31 20:43:51 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2017-08-01 08:12:29 (GMT)
commit aaa6a5202a447fb4e86d5f016d8e79fbc34a3ed7 (patch)
tree 1306fda3eeb4f9f20e15f56809d0f3205a6087c8
parent d99cc336d8476975a9fd7adf01b4b9f9cd917aaa (diff)
tdf#109790 RTF import: keep remembering paragraph style between \cell and \row
This is the opposite situation as tdf#44715, where the problem was that
style was not reset between in-cell paragraphs.

Here we don't want to reset the paragraph style too early, so that
direct (character) formatting isn't lost just because the theoretical
end-of-row character would not have the same direct formatting.

Bisected with bibisect-linux64-6.0

Adding Cc: to Miklos Vajna
Comment 2 Commit Notification 2017-10-24 09:27:32 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f8b5ecc622e2b3e82576b27bf0ded9c8eac21cae

tdf#113202 RTF import: fix lack of expected contextual spacing

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2017-10-25 12:27:41 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=63054103570377ef8949addfa153b23838c1672a&h=libreoffice-5-4

tdf#113202 RTF import: fix lack of expected contextual spacing

It will be available in 5.4.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2017-10-29 20:39:39 UTC
Verified in

Version: 6.0.0.0.alpha1+
Build ID: fc4f2f1b0f8c286e9ae259c44fb249261a8ac47f
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group