tdf#113202 RTF import: fix lack of expected contextual spacing

Upper, lower and contextual spacing are all stored in SvxULSpaceItem, so
if after spacing is set as direct formatting, contextual spacing has to
be set directly as well (having it in the paragraph style has no
effect).

Change-Id: Ie331c7561de7f2f16776a1613717e38fa083a541